Fixed the size of the text on mobile

--- a/scss/_details_content-header.scss
+++ b/scss/_details_content-header.scss
@@ -3,6 +3,7 @@
 // Put the arrow on the text
 .details_content-breadcrumb {
   position: relative;
+  max-width: max-content;
 }
 
 .breadcrumb-link {
