--- a/scss/_details_content-summary-article.scss
+++ b/scss/_details_content-summary-article.scss
@@ -13,6 +13,8 @@
 .summary_article-header-paragraph {
   line-height: 24px;
   padding-top: 31px;
+  font-size: 16px;
+  font-weight: $font-regular;
 }
 
 .summary_article-paragraph,
@@ -33,10 +35,25 @@
   margin: 0;
 }
 
+.summary_article-paragraph {
+  font-size: 12px;
+  line-height: 20px;
+}
+
 @media (min-width: 300px) {
   .summary_article-heading {
     font-size: 40px;
     line-height: 48px;
+  }
+
+  .summary_article-header-paragraph {
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  .summary_article-paragraph {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
