--- a/scss/_other_works.scss
+++ b/scss/_other_works.scss
@@ -13,6 +13,8 @@
 
 .other_works-details {
   flex-direction: column;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 .other_works-image {
@@ -26,6 +28,7 @@
 .other_works-date {
   font-size: 10px;
   font-weight: 700;
+  line-height: 24px;
 }
 
 .other_works-link {
@@ -40,8 +43,16 @@
 }
 
 @media (min-width: 300px) {
+  .other_works-details {
+    font-size: 16px;
+  }
+
   .other_works-date {
     font-size: 12px;
+  }
+
+  .other_works-image {
+    height: 48px;
   }
 }
 
